# miniclue

./: .env.example  .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PRD.md  README.md  WORKFLOW.md  conductor.json  doc.go  docker-compose.yml  go.mod  go.sum  instrumentation-client.ts  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  schema.sql  turbo.json  vercel.json
.claude/: settings.json
.claude/hooks/: block-supabase.sh
.cursor/rules/: clean-code.mdc  go.mdc
.github/workflows/: cd-production.yml  cd-staging.yml  cd.yml  ci.yml  cicd.yml  deploy-production.yml  release.yml
app/: main.py  run.py  runner.py
app/routers/: __init__.py  chat.py  embed.py  embedding.py  explain.py  explanation.py  image_analysis.py  ingest.py  ingestion.py  summarize.py  summary.py
app/schemas/: chat.py  common.py  embed.py  explain.py  explanation.py  image_analysis.py  ingest.py  ingestion.py  summarize.py  summary.py
app/services/: embed.py  explain.py  ingest.py  summarize.py
app/utils/: config.py  db_utils.py  embedding_utils.py  llm_db_utils.py  llm_token_costs.json  llm_utils.py  logging.py  model_provider_mapping.py  posthog_client.py  secret_manager.py
apps/ai/: .env.example  README.md  package.json  pyproject.toml
apps/backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package.json
scripts/: setup-pubsub-local.js  setup_pubsub.sh
src/: middleware.ts  proxy.ts
supabase/: config.toml  seed.sql
tests/: test_embed.py  test_explain.py  test_ingest.py  test_summarize.py
(+406 files in other folders)
